--- a/olca-app-build/templates/Info.plist
+++ b/olca-app-build/templates/Info.plist
@@ -3,7 +3,7 @@
 
 	<dict>
 		<key>CFBundleExecutable</key>
-            <string>openLCA</string>
+            <string>aicpLCA</string>
 		<key>CFBundleGetInfoString</key>
             <string>The open source Life Cycle and Sustainability Assessment software</string>
         <key>LSApplicationCategoryType</key>
@@ -15,7 +15,7 @@
 		<key>CFBundleInfoDictionaryVersion</key>
             <string>6.0</string>
 		<key>CFBundleName</key>
-            <string>openLCA</string>
+            <string>aicpLCA</string>
 		<key>CFBundlePackageType</key>
             <string>APPL</string>
 		<key>CFBundleShortVersionString</key>
@@ -34,7 +34,7 @@
                 <string>~/.eclipse_keyring</string>
             </array>
 		<key>CFBundleDisplayName</key>
-            <string>openLCA</string>
+            <string>aicpLCA</string>
 	</dict>
 
 </plist>
