--- a/olca-app/build.properties
+++ b/olca-app/build.properties
@@ -11,7 +11,7 @@ bin.includes = plugin.xml,\
                .,\
                icons/,\
                splash.bmp,\
-               openLCA.product,\
+               aicpLCA.product,\
                html/,\
                plugin_customization.ini,\
                db_templates/,\
