--- a/olca-app/db_templates/.gitignore
+++ b/olca-app/db_templates/.gitignore
@@ -1,2 +1,3 @@
 # this folder must contain the database templates which can be generated with
 # the olca-refdata project (cd olca-refdata & mvn package)
+*.zolca
