fix show on mac

--- a/olca-app-build/templates/Info.plist
+++ b/olca-app-build/templates/Info.plist
@@ -11,7 +11,7 @@
 		<key>CFBundleIconFile</key>
             <string>logo.icns</string>
 		<key>CFBundleIdentifier</key>
-            <string>org.openlca.app</string>
+            <string>org.aicplca.app</string>
 		<key>CFBundleInfoDictionaryVersion</key>
             <string>6.0</string>
 		<key>CFBundleName</key>
