--- a/olca-app/plugin.xml
+++ b/olca-app/plugin.xml
@@ -610,6 +610,10 @@
          name="startupProgressRect"
          value="0,437,586,5">
    </property>
+   <property
+         name="preferenceCustomization"
+         value="plugin_customization.ini">
+   </property>
 		</product>
 	</extension>
 	<extension
